tests/files/type_checker_tests/should_fail/123.cmdr
//Should fail if left hand side of set is something not an lvalue
(if true then true else true) -= 3;
